--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
                 <div class="mt-3">
                     <h3>Delivery Options</h3>
                     <button id="late-delivery" class="upper-btns">Friday, Aug 25 Free
-                        Prime
-                        Delivery</button>
+                        Prime Delivery</button>
                     <button id="early-delivery" class="upper-btns">Friday, Aug 21
-                        Delivery
-                        Charge $20</button>
+                        Delivery Charge $20</button>
                 </div>
                 <!-- Delivery Section Close -->
 
@@ -74,7 +72,7 @@
                         <div class="col-md-6">
                             <div class="d-flex justify-content-between">
                                 <h4 id="base-price">Base Price</h4>
-                                <h4> $ <span>1299</span></h4>
+                                <h4>$<span>1299</span></h4>
                             </div>
 
                             <hr>
@@ -86,19 +84,19 @@
                             <hr>
                             <div class="d-flex justify-content-between">
                                 <h4>Extra Storage Cost</h4>
-                                <h4>$ <span id="storage-cost">0</span></h4>
+                                <h4>$<span id="storage-cost">0</span></h4>
                             </div>
 
                             <hr>
                             <div class="d-flex justify-content-between">
                                 <h4>Delivery Cost</h4>
-                                <h4>$ <span id="delivery-cost">0</span></h4>
+                                <h4>$<span id="delivery-cost">0</span></h4>
                             </div>
 
                             <hr>
                             <div class="d-flex justify-content-between">
                                 <h4>Total Price</h4>
-                                <h4>$ <span id="total-price">1299</span></h4>
+                                <h4>$<span id="total-price">1299</span></h4>
                             </div>
                             <!-- Total Count Section Close -->
 
@@ -118,6 +116,8 @@
         </div>
 
         <hr>
+        <!-- User Payment -->
+
         <h3 class="text-center">Total: $<span id="user-payment">1299</span></h3>
 
     </main>
@@ -131,6 +131,7 @@
     <!-- Main js File  -->
 
     <script src="js/apps.js"></script>
+
 </body>
 
 </html>
